# OpenScanLib

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Modules.c  OpenScanAcquisition.c  OpenScanDevice.c  OpenScanDeviceImpl.h  OpenScanDevices.c  OpenScanLSM.c  OpenScanLib.h  OpenScanLib.sln  OpenScanLib.vcxproj  OpenScanLib.vcxproj.filters  OpenScanLibPrivate.h  OpenScanSetting.c  README.md  index.html  makedoc.sh  meson.build  meson_options.txt
.github/workflows/: ci.yml
ModuleLoadTest/: ModuleLoadTest.vcxproj  main.c  meson.build
OpenScanDeviceLib/: OpenScanDeviceLib.c  OpenScanDeviceLib.vcxproj  OpenScanDeviceLib.vcxproj.filters  OpenScanDeviceLibPrivate.h  OpenScanDeviceLibPrivate_8h.html  OpenScanDeviceLibPrivate_8h__incl.dot  OpenScanDeviceLibPrivate_8h_source.html  OpenScanDeviceLib_8h.html  OpenScanDeviceLib_8h__dep__incl.dot  OpenScanDeviceLib_8h__incl.dot  OpenScanDeviceLib_8h_source.html  README.md  _open_scan_device_lib_8c_source.html  _open_scan_device_lib_8h.html  _open_scan_device_lib_8h_source.html  _open_scan_device_lib_private_8h.html  _open_scan_device_lib_private_8h_source.html  annotated.html  classes.html  dir_000000_000001.html  dir_000001_000000.html  dir_13ab9a843c3134cadc5f631e60187646.html  dir_13ab9a843c3134cadc5f631e60187646_dep.dot  dir_a44b2e0b3f3bb1b1d983ed98a7159f61.html  dir_a44b2e0b3f3bb1b1d983ed98a7159f61_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  group__dpi.html  group__internal.html  index.html  menudata.js  (+13 more)
OpenScanDeviceLib/doc/: Doxyfile  Doxyfile.in  meson.build
OpenScanDeviceLib/include/: OpenScanDeviceLib.h
OpenScanDeviceLib/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  pages_0.js  pages_1.js  pages_3.js  pages_4.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js
OpenScanLib/: OpenScanLib.vcxproj  OpenScanLib.vcxproj.filters  OpenScanLib_8h.html  OpenScanLib_8h__incl.dot  OpenScanLib_8h_source.html  _open_scan_lib_8h.html  _open_scan_lib_8h_source.html  deprecated.html  dir_58ece507bcc6931461c9d02c5e591634.html  dir_9d1fde9de7244fc08992367663ab58ef.html  dir_9d1fde9de7244fc08992367663ab58ef_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  group__api.html  group__internal.html  index.html  menudata.js  meson.build  modules.html  pages.html  todo.html  topics.html
OpenScanLib/doc/: Doxyfile  Doxyfile.in  meson.build
OpenScanLib/include/: OpenScanDeviceImpl.h  OpenScanLib.h
OpenScanLib/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  pages_0.js  pages_1.js  pages_3.js  pages_5.js  search.css  searchdata.js  typedefs_0.js
OpenScanLib/src/: AcqTemplate.c  Acquisition.c  Array.c  Device.c  DeviceEnumeration.c  DeviceInterface.c  DeviceInterface.h  DeviceModule.c  Error.c  InternalErrors.c  InternalErrors.h  LSM.c  Logging.c  Module.c  Module.h  Modules.c  Modules.h  OpenScanAcquisition.c  OpenScanClock.c  OpenScanDetector.c  OpenScanDevice.c  OpenScanDeviceModules.c  OpenScanDeviceModules.h  OpenScanDevices.c  OpenScanLSM.c  OpenScanLibPrivate.h  OpenScanLogging.c  OpenScanScanner.c  OpenScanSetting.c  Setting.c  Version.c
OpenScanLibTests/: OpenScanLibTests.c  OpenScanLibTests.vcxproj  OpenScanLibTests.vcxproj.filters  meson.build
SimulatedDeviceModule/: Clock.c  Detector.c  OScNIDAQ.c  OScNIDAQ.h  OScNIDAQDevice.c  OScNIDAQDevicePrivate.h  OScNIDAQSettings.c  OpenScanNIDAQ.sln  OpenScanNIDAQ.vcxproj  Scanner.c  SimulatedDevice.c  SimulatedDevice.h  SimulatedDeviceModule-Legacy.vcxproj  SimulatedDeviceModule-Legacy.vcxproj.filters  SimulatedDeviceModule.sln  SimulatedDeviceModule.vcxproj  SimulatedDeviceModule.vcxproj.filters  SimulatedDevice_Legacy.c  Waveform.c  Waveform.h  meson.build  strmap.c  strmap.h
SimulatedDeviceModule2/: SimulatedDevice.c  SimulatedDeviceModule2.vcxproj
TestDeviceModule/: DeviceModules.h  TestDevice.c  TestDeviceModule.vcxproj  TestDeviceModule.vcxproj.filters  TestDeviceRichError.c  meson.build
enc_temp_folder/60ff677271383358c56b23b5531f3e9/: SimulatedDevice.c
subprojects/: .gitignore  RichErrors.wrap  ssstr.wrap
