option(
    'docs',
    type: 'feature',
    value: 'auto',
    description: 'Build and install API documentation (requires Doxygen)',
)

option(
    'tests',
    type: 'feature',
    value: 'enabled',
    description: 'Build unit tests',
)

option(
    'apilib',
    type: 'feature',
    value: 'enabled',
    description: 'Build OpenScanLib, the API library',
)

option(
    'devicelib',
    type: 'feature',
    value: 'disabled',
    description: 'Build OpenScanDeviceLib, the device module runtime',
)
